2005-07-29  Florian Boor  <florian.boor@kernelconcepts.de>

	* Version 0.14 released.
	* configure.ac: Fix version number.

2005-05-27  Florian Boor  <florian.boor@kernelconcepts.de>

	* Add autotools support.
	* configure.ac, autogen.sh, Makefile.am, gpe-dist.am, libschedule.pc.in:
	  new files.
	* configure.ac: Version set to 0.15.
	* Makefile: deleted.

2004-04-27  Moray Allan  <moray@handhelds.org>

	* Makefile: Compile with -fPIC.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Version 0.13 released.

2004-03-25  Philip Blundell  <philb@gnu.org>

	* Makefile: Bring up to modern standards vis-a-vis PACKAGE_CFLAGS,
	etc.

2004-02-23  Joseph J. McCarthy  <mccarthy@engrng.pitt.edu>
                                                                                
        * release version 0.12 
                                                                                
2004-02-23  Joseph J. McCarthy  <mccarthy@engrng.pitt.edu>
	
	* atd.c : using Nils fix for re-scheduling issues

2003-04-20  Philip Blundell  <philb@gnu.org>

	* atd.c: Tolerate actions with no trailing newline.

2003-04-16  Joseph J. McCarthy  <mccarthy@engrng.pitt.edu>
	
	* atd.c : re-arrange the order of script operations and add an "export" before DISPLAY':0