@@ -1,3 +1,7 @@
+2005-08-01  Florian Boor  <florian.boor@kernelconcepts.de>
+
+	* doc/*, configure.ac, Makefile.am: Add documentation framework.
+
 2005-07-29  Florian Boor  <florian.boor@kernelconcepts.de>
 
 	* Version 0.14 released.
